# gem-slap

./: game_data.py  main.py  pyproject.toml
static/: engine.js  menu.js  robots.txt  service-worker.js  sitemap.xml
templates/: index.html  privacy.html  terms.html
